# TextSearch

./: Cargo.toml  TODO
Examples/: FileUsedToRunTest.txt  test1.rs
src/: lib.rs  text_search.rs
src/OutputHandler/: mod.rs  output_handler.rs
