[package]
name = "text_search"
version = "0.1.0"
authors = ["Simuk Arya <simukarya1@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
DirectoryNavigator = {path = "../DirectoryNavigator"}